unpackaged/main/default/objects/Contract/fields/Consulting_Cancel_Suspension_Notice__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Cancel_Suspension_Notice__c</fullName>
    <label>Consulting Cancel/Suspension Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; or = 10 days</fullName>
            </value>
            <value>
                <fullName>&gt;10 working days</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>