unpackaged/main/default/objects/Contract/fields/Consulting_Cancel_Suspension_Rights__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Cancel_Suspension_Rights__c</fullName>
    <inlineHelpText>If yes, Customer has express right to cancel/suspend consulting services / the project</inlineHelpText>
    <label>Consulting Cancel/Suspension Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>