unpackaged/main/default/objects/Contract/fields/Contract_ABN__c.field-meta.xml
<CustomField>
    <fullName>Contract_ABN__c</fullName>
    <inlineHelpText>ABN / Company Number / NZBN on Contract</inlineHelpText>
    <label>Contract ABN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>