unpackaged/main/default/objects/Contract/fields/Contract_Terminated_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terminated_By__c</fullName>
    <label>Contract Terminated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TechnologyOne</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>New Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>