unpackaged/main/default/objects/Contract/fields/Crystal_Designer_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Crystal_Designer_Clause_Ref__c</fullName>
    <label>Crystal Designer Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>