unpackaged/main/default/objects/Contract/fields/Crystal_Designer_Licence_Grant__c.field-meta.xml
<CustomField>
    <fullName>Crystal_Designer_Licence_Grant__c</fullName>
    <inlineHelpText>If yes, the agreement expressly grants the customer a crystal designer licence.</inlineHelpText>
    <label>Crystal Designer Licence Grant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>