unpackaged/main/default/objects/Contract/fields/Customer_Audit_Right__c.field-meta.xml
<CustomField>
    <fullName>Customer_Audit_Right__c</fullName>
    <inlineHelpText>Customer has express right to audit</inlineHelpText>
    <label>Customer Audit Right</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>