unpackaged/main/default/objects/Contract/fields/Customer_Audit_Right_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Customer_Audit_Right_Clause_Ref__c</fullName>
    <label>Customer Audit Right Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>