unpackaged/main/default/objects/Contract/fields/Customer_Liability_Cap_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Liability_Cap_Detail__c</fullName>
    <inlineHelpText>Detail including amounts</inlineHelpText>
    <label>Customer Liability Cap Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>