unpackaged/main/default/objects/Contract/fields/Customer_Name_On_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_On_Contract__c</fullName>
    <description>Customer Name on Contract</description>
    <inlineHelpText>Customer Name on Contract may be different from Account Name</inlineHelpText>
    <label>Customer Name On Contract</label>
    <length>200</length>
    <type>Text</type>
</CustomField>