unpackaged/main/default/objects/Contract/fields/Customer_Privacy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Privacy_Contact__c</fullName>
    <inlineHelpText>Customer privacy email / address / contact details</inlineHelpText>
    <label>Customer Privacy Contact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>