unpackaged/main/default/objects/Contract/fields/Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Data Migration</label>
    <type>Checkbox</type>
</CustomField>