unpackaged/main/default/objects/Contract/fields/Data_Migration_Details__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Details__c</fullName>
    <label>z_Data Migration Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>