unpackaged/main/default/objects/Contract/fields/Data_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Location__c</fullName>
    <label>Data Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>EU &amp; UK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer&#39;s State or Territory</fullName>
            </value>
            <value>
                <fullName>Dublin, Ireland</fullName>
            </value>
            <value>
                <fullName>Ireland and UK</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>