unpackaged/main/default/objects/Contract/fields/Data_Storage_Location_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Location_Clause_Ref__c</fullName>
    <label>Data Storage Location Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>