unpackaged/main/default/objects/Contract/fields/Data_Storage_Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Location_Detail__c</fullName>
    <label>Data Storage Location Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>