unpackaged/main/default/objects/Contract/fields/Data_Transformation_Environment__c.field-meta.xml
<CustomField>
    <fullName>Data_Transformation_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Transformation Environment</label>
    <type>Checkbox</type>
</CustomField>