unpackaged/main/default/objects/Contract/fields/Deemed_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Acceptance__c</fullName>
    <label>Deemed Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>