unpackaged/main/default/objects/Contract/fields/Deemed_Acceptance_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Acceptance_Clause_Ref__c</fullName>
    <label>Deemed Acceptance Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>