unpackaged/main/default/objects/Contract/fields/Deemed_Acceptance_Detail__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Acceptance_Detail__c</fullName>
    <inlineHelpText>Deemed acceptance e.g. when used in production environment or expiry of acceptance period / completion of UAT etc.</inlineHelpText>
    <label>Deemed Acceptance Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>