unpackaged/main/default/objects/Contract/fields/Deemed_Material_Breach_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Deemed_Material_Breach_Clause_Ref__c</fullName>
    <label>Deemed Material Breach Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>