unpackaged/main/default/objects/Contract/fields/Delivery_Delay_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Delay_Clause_Ref__c</fullName>
    <label>Delivery Delay Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>