unpackaged/main/default/objects/Contract/fields/Delivery_Delay_Process__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Delay_Process__c</fullName>
    <label>Delivery Delay Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>