unpackaged/main/default/objects/Contract/fields/Delivery_Timeframes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Timeframes__c</fullName>
    <label>Delivery Timeframes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated only</fullName>
            </value>
            <value>
                <fullName>Fixed timeframes</fullName>
            </value>
            <value>
                <fullName>Mixed - fixed &amp; estimate</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>