unpackaged/main/default/objects/Contract/fields/Delivery_Timeframes_Detail__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Timeframes_Detail__c</fullName>
    <inlineHelpText>Which phases are fixed / estimated?</inlineHelpText>
    <label>Delivery Timeframes Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>