unpackaged/main/default/objects/Contract/fields/DPA_Link__c.field-meta.xml
<CustomField>
    <fullName>DPA_Link__c</fullName>
    <inlineHelpText>ECM URL link to standalone DPA</inlineHelpText>
    <label>DPA Link</label>
    <type>Url</type>
</CustomField>