unpackaged/main/default/objects/Contract/fields/DPA_Privacy_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>DPA_Privacy_Clause_Ref__c</fullName>
    <label>DPA/Privacy Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>