unpackaged/main/default/objects/Contract/fields/DPA_Privacy_Type__c.field-meta.xml
<CustomField>
    <fullName>DPA_Privacy_Type__c</fullName>
    <label>DPA/Privacy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Privacy clause</fullName>
            </value>
            <value>
                <fullName>DPA included in contract</fullName>
            </value>
            <value>
                <fullName>DPA incorporated by reference</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>