unpackaged/main/default/objects/Contract/fields/DRaaS_Compliance_Retention_Period__c.field-meta.xml
<CustomField>
    <fullName>DRaaS_Compliance_Retention_Period__c</fullName>
    <inlineHelpText>For other, refer DRaaS Non-Standard Clauses</inlineHelpText>
    <label>DRaaS Compliance Retention Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 years</fullName>
            </value>
            <value>
                <fullName>10 years</fullName>
            </value>
            <value>
                <fullName>15 years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>