unpackaged/main/default/objects/Contract/fields/DRaaS_Non_Standard_Clauses__c.field-meta.xml
<CustomField>
    <fullName>DRaaS_Non_Standard_Clauses__c</fullName>
    <inlineHelpText>Non-Standard provisions in the DRaaS agreement</inlineHelpText>
    <label>DRaaS Non-Standard Clauses</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>