unpackaged/main/default/objects/Contract/fields/Early_Adopter_Product__c.field-meta.xml
<CustomField>
    <fullName>Early_Adopter_Product__c</fullName>
    <inlineHelpText>The early adopter product as identified in the Order Form</inlineHelpText>
    <label>Early Adopter Product</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>