unpackaged/main/default/objects/Contract/fields/Enterprise_Licence_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Licence_Clause_Ref__c</fullName>
    <label>Enterprise Licence Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>