unpackaged/main/default/objects/Contract/fields/Enterprise_Uplift_Clause__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Uplift_Clause__c</fullName>
    <inlineHelpText>Express right to invoice if Enterprise Licence is exceeded</inlineHelpText>
    <label>Enterprise Uplift Invoice Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>