unpackaged/main/default/objects/Contract/fields/Enterprise_Uplift_Detail__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Uplift_Detail__c</fullName>
    <inlineHelpText>Detail of Enterprise Licence definition and invoice rights</inlineHelpText>
    <label>Enterprise Licence Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>