unpackaged/main/default/objects/Contract/fields/Escrow_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Agreement_URL__c</fullName>
    <inlineHelpText>ECM URL of Escrow Agreement</inlineHelpText>
    <label>Escrow Agreement URL</label>
    <type>Url</type>
</CustomField>