unpackaged/main/default/objects/Contract/fields/Escrow_Required__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Required__c</fullName>
    <inlineHelpText>If yes, T1 is required to enter into escrow agreement either at contract or on request by the customer</inlineHelpText>
    <label>Escrow Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - On Request</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>