unpackaged/main/default/objects/Contract/fields/Escrow_Required_Detail__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Required_Detail__c</fullName>
    <label>z_Escrow Required Detail</label>
    <type>TextArea</type>
</CustomField>