unpackaged/main/default/objects/Contract/fields/Escrow_Requirements_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Requirements_Clause_Ref__c</fullName>
    <label>Escrow Requirements Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>