unpackaged/main/default/objects/Contract/fields/EULA_Attached__c.field-meta.xml
<CustomField>
    <fullName>EULA_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>End User License Agreement</inlineHelpText>
    <label>z_EULA Attached</label>
    <type>Checkbox</type>
</CustomField>