unpackaged/main/default/objects/Contract/fields/Exception_ASM__c.field-meta.xml
<CustomField>
    <fullName>Exception_ASM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Exception ASM Info</label>
    <type>Checkbox</type>
</CustomField>