unpackaged/main/default/objects/Contract/fields/Expenses_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Clause_Ref__c</fullName>
    <label>Expenses Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>