unpackaged/main/default/objects/Contract/fields/Extended_Cloud_SLAs__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cloud_SLAs__c</fullName>
    <inlineHelpText>Non-Standard Cloud SLAs relating to Cloud Availability, refer to Support Terms for response, resolution and restore SLAs.</inlineHelpText>
    <label>Non-Standard Cloud SLAs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>