unpackaged/main/default/objects/Contract/fields/Fee_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure__c</fullName>
    <inlineHelpText>This fee structure relates to SaaS, Licence, ASM, Cloud or other Annual fees. It does not apply to fees to implementation or consulting services fees. If Bespoke, refer to Other Finance Commercial notes.</inlineHelpText>
    <label>Fee Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual + CPI</fullName>
                <label>Annual + Indexation</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Fixed for Initial Period + CPI</fullName>
                <label>Fixed for Initial Period then Indexed</label>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Upfront Licence Fee + Annual Fees subject to CPI</fullName>
                <label>Upfront Licence Fee + Annual Fees subject to Indexation</label>
            </value>
            <value>
                <fullName>None - No Fees or Charges Apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>