unpackaged/main/default/objects/Contract/fields/Fee_Table_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Fee_Table_Clause_Ref__c</fullName>
    <inlineHelpText>Fee table clause reference and page number</inlineHelpText>
    <label>Fee Table Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>