unpackaged/main/default/objects/Contract/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <label>z_File Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compactus (on-site)</fullName>
            </value>
            <value>
                <fullName>Document Storage (off site)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>