unpackaged/main/default/objects/Contract/fields/Finance_Revenue_Note__c.field-meta.xml
<CustomField>
    <fullName>Finance_Revenue_Note__c</fullName>
    <label>z_Finance Revenue Note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>