unpackaged/main/default/objects/Contract/fields/Future_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Future_Discounts__c</fullName>
    <inlineHelpText>Future discounts or guaranteed pricing</inlineHelpText>
    <label>Future Discounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>