unpackaged/main/default/objects/Contract/fields/Future_Discounts_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Future_Discounts_Clause_Ref__c</fullName>
    <inlineHelpText>Future discounts or guaranteed pricing clause reference</inlineHelpText>
    <label>Future Discounts Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>