unpackaged/main/default/objects/Contract/fields/Future_Discounts_Details__c.field-meta.xml
<CustomField>
    <fullName>Future_Discounts_Details__c</fullName>
    <inlineHelpText>Future discounts or guaranteed pricing</inlineHelpText>
    <label>Future Discounts Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>