unpackaged/main/default/objects/Contract/fields/Future_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality__c</fullName>
    <inlineHelpText>Commitment to: 
(i) a release of software version date; or
(ii) functionality by a fixed date
(iii) functionality in future roadmap
(iv) functionality not in roadmap</inlineHelpText>
    <label>Future Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified by Business</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>