unpackaged/main/default/objects/Contract/fields/Future_Functionality_Clause__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Clause__c</fullName>
    <label>Future Functionality Clause Ref</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>