unpackaged/main/default/objects/Contract/fields/Future_Functionality_Completed__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Future Functionality Completed</label>
    <type>Checkbox</type>
</CustomField>