unpackaged/main/default/objects/Contract/fields/Future_Functionality_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Delivery_Date__c</fullName>
    <label>z_Future Functionality Delivery Date</label>
    <length>120</length>
    <type>Text</type>
</CustomField>