unpackaged/main/default/objects/Contract/fields/Future_Functionality_Description__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Description__c</fullName>
    <inlineHelpText>What is required, by when (specified dates for delivery) and consequences of not delivering by date</inlineHelpText>
    <label>Future Functionality Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>