unpackaged/main/default/objects/Contract/fields/Future_Functionality_Hard_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Functionality_Hard_Date__c</fullName>
    <label>Specified Dates for Future Functionality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>