unpackaged/main/default/objects/Contract/fields/Guarantee_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Clause_Ref__c</fullName>
    <label>Guarantee Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>