unpackaged/main/default/objects/Contract/fields/Harmful_Code_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Harmful_Code_Warranty__c</fullName>
    <inlineHelpText>Does T1 offer a warranty that it will not introduce harmful code or that T1 will undertake non-standard processes to prevent harmful code/viruses?</inlineHelpText>
    <label>Harmful Code Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>